*** empty log message ***

--- a/utilities/miff.4
+++ b/utilities/miff.4
@@ -60,7 +60,7 @@ has no default.
 .B "compression=\fBFax\fP"
 .B "compression=\fBJPEG\fP"
 .B "compression=\fBLZW\fP"
-.B "compression=\fBRunlengthEncoded\fP"
+.B "compression=\fBRLE\fP"
 .B "compression=\fBZip\fP"
 the type of algorithm used to compress the image data.  If this
 key is not present, the image data is assumed to be uncompressed.
