*** empty log message ***

--- a/utilities/ImageMagick.1
+++ b/utilities/ImageMagick.1
@@ -1179,7 +1179,7 @@ options \fIbefore\fP the \fB-draw\fP option.
 \fRemboss an image
 .TP
 .B "-encoding \fI<type>"\fP
-\fRspecify the font encoding
+\fRspecify the text encoding
 
 Choose from \fIAdobeCustom, AdobeExpert, AdobeStandard, AppleRoman,
 BIG5, GB2312, Latin 2, None, SJIScode, Symbol, Unicode, Wansung.\fP
