--- a/utilities/import.1
+++ b/utilities/import.1
@@ -100,7 +100,7 @@ For a more detailed description of each option, see
 \fRapply Floyd/Steinberg error diffusion to the image
 .TP
 .B "-encoding \fI<type>"\fP
-\fRspecify the font encoding
+\fRspecify the text encoding
 .TP
 .B "-endian \fI<type>"\fP
 \fRspecify endianness (MSB or LSB) of output image
