--- a/utilities/montage.1
+++ b/utilities/montage.1
@@ -176,7 +176,7 @@ For a more detailed description of each option, see
 \fRannotate an image with one or more graphic primitives
 .TP
 .B "-encoding \fI<type>"\fP
-\fRspecify the font encoding
+\fRspecify the text encoding
 .TP
 .B "-endian \fI<type>"\fP
 \fRspecify endianness (MSB or LSB) of output image
