--- a/utilities/convert.1
+++ b/utilities/convert.1
@@ -206,7 +206,7 @@ For a more detailed description of each option, see
 \fRemboss an image
 .TP
 .B "-encoding \fI<type>"\fP
-\fRspecify the font encoding
+\fRspecify the text encoding
 .TP
 .B "-endian \fI<type>"\fP
 \fRspecify endianness (MSB or LSB) of output image
