Added cross references to details about options.

--- a/utilities/ImageMagick.1
+++ b/utilities/ImageMagick.1
@@ -1950,6 +1950,7 @@ The default preview is \fBJPEG\fP.
 
 The sequence of images
 is terminated by the appearance of any option.
+
 If the \fB-process\fP
 option appears after all of the input images, all images are processed.
 .TP
@@ -2111,7 +2112,7 @@ is present.  Offsets, if present in the geometry string, are ignored, and
 the \fB-gravity\fP option has no effect.
 
 .TP
-.B "-sampling_factor \fI<horizontal_factor>x<vertical_factor> "\fP
+.B "-sampling_factor \fI<horizontal_factor>x<vertical_factor>"\fP
 \fRsampling factors used by JPEG or MPEG-2 encoder and YUV decoder/encoder.
 
 This option specifies the sampling factors to be used by the JPEG encoder for
@@ -2397,7 +2398,7 @@ produces an image title of MIFF:bird.miff 512x480 for an image
 titled bird.miff and whose width is 512 and height is 480.
 
 .TP
-.B "-transform \fI"\fP
+.B "-transform"
 \fRtransform the image
 
 This option applies the transformation matrix from a previous
