--- a/utilities/mogrify.1
+++ b/utilities/mogrify.1
@@ -275,7 +275,7 @@ For a more detailed description of each option, see
 .B "-sample \fI<geometry>"\fP
 \fRscale image with pixel sampling
 .TP
-.B "-sampling_factor \fI<horizontal_factor>x<vertical_factor> "\fP
+.B "-sampling_factor \fI<horizontal_factor>x<vertical_factor>"\fP
 \fRsampling factors used by JPEG or MPEG-2 encoder and YUV decoder/encoder.
 .TP
 .B "-scale \fI<geometry>"\fP
@@ -329,7 +329,7 @@ For a more detailed description of each option, see
 .B "-tile \fI<filename>"\fP
 \fRtile image when filling a graphic primitive
 .TP
-.B "-transform \fI"\fP
+.B "-transform"
 \fRtransform the image
 .TP
 .B "-transparent \fI<color>"\fP
