--- a/Magick++/ChangeLog
+++ b/Magick++/ChangeLog
@@ -1,10 +1,15 @@
+2002-09-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Image.cpp (compare): New method to compare current image
+ 	with a reference image.
+
 2002-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Image.cpp (textEncoding): New method to allow setting the
  	default text encoding (e.g. "UTF-8").
 
 	* lib/Drawable.cpp (DrawableText): Added an alternate constructor
- 	to allow specifying the text encoding.
+ 	to allow specifying the text encoding (e.g. "UTF-8").
 
 2002-08-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
