Revised description of Deconstruct method and -deconstruct option.

--- a/utilities/ImageMagick.1
+++ b/utilities/ImageMagick.1
@@ -897,7 +897,8 @@ shifted.
 This option compares each image with the next in a sequence and
 returns the maximum bounding region of any pixel differences it discovers.
 This method can undo a coalesced sequence returned by the
-\fB-coalesce\fP option.
+\fB-coalesce\fP option, and is useful for removing redundant information
+from a GIF or MNG animation.
 
 The sequence of images
 is terminated by the appearance of any option.
