--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-06  Leonard Rosenthol <leonardr@lazerware.com>
+  * Fixed some bugs in the Clipboard coder
+  * Added new ImageToHBITMAP function to NTFeature.c/.h in core
+  * Added support for Quantum==32 to IMDisplay
+
 2002-08-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
   * Fix formatting in the *.mgk files so that they are XML conformant
 
