--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2002-08-08  Cristy  <cristy@mystic.es.dupont.com>
+  * Added logging capabilities to the CORE API.  This facility is useful
+    for debugging.
+
+2002-08-07  Cristy  <cristy@mystic.es.dupont.com>
+  * ImageMagick 5.4.9 released.
+
 2002-09-06  Leonard Rosenthol <leonardr@lazerware.com>
   * Fixed some bugs in the Clipboard coder
   * Added new ImageToHBITMAP function to NTFeature.c/.h in core
