--- a/utilities/mogrify.1
+++ b/utilities/mogrify.1
@@ -23,11 +23,12 @@ To convert all the TIFF files in a particular directory to JPEG, use:
 
 To convert a directory full of JPEG images to thumbnails, use:
 
-    convert -size 120x120 *.jpg -resize 120x120 +profile "*"
+    mogrify -size 120x120 *.jpg -resize 120x120 +profile "*"
 
-In this example, '-i size 120x120' gives a hint to the JPEG decoder
+In this example, '-size 120x120' gives a hint to the JPEG decoder
 that the images are going to be downscaled to 120x120, allowing it to run
-faster by avoiding returning full-resolution images.  The
+faster by avoiding returning full-resolution images to ImageMagick for
+the subsequent resizing operation.  The
 '-resize 120x120' specifies the desired dimensions of the
 output images.  It will be scaled so its largest dimension is 120 pixels.  The
 '+profile "*"' removes any ICM, EXIF, IPTC, or other profiles
