--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2002-08-08  Cristy  <cristy@mystic.es.dupont.com>
   * Added logging capabilities to the CORE API.  This facility is useful
     for debugging.
+  * AcquireImagePixels() did not always return the same pixel values
+    for virtual pixels when the cache was stored on disk (very rare).
 
 2002-08-07  Cristy  <cristy@mystic.es.dupont.com>
   * ImageMagick 5.4.9 released.
