--- a/utilities/convert.1
+++ b/utilities/convert.1
@@ -449,6 +449,9 @@ For a more detailed description of each option, see
 .B "-view \fI<string>"\fP
 \fRFlashPix viewing parameters
 .TP
+.B "-virtual_pixel \fI<type>"\fP
+\fRspecify contents of "virtual pixels"
+.TP
 .B "-wave \fI<amplitude>x<wavelength>"\fP
 \fRalter an image along a sine wave
 .TP
