--- a/utilities/animate.1
+++ b/utilities/animate.1
@@ -56,6 +56,9 @@ For a more detailed description of each option, see
 \fIImageMagick(1)\fP.
 
 .TP
+.B "-authenticate \fI<string>"\fP
+\fRdecrypt image with this password
+.TP
 .B "-backdrop \fI<color>"\fP
 \fRdisplay the image centered on a backdrop.
 .TP
