--- a/utilities/composite.1
+++ b/utilities/composite.1
@@ -61,6 +61,9 @@ For a more detailed description of each option, see
 \fIImageMagick(1)\fP.
 
 .TP
+.B "-authenticate \fI<string>"\fP
+\fRdecrypt image with this password
+.TP
 .B "-background \fI<color>"\fP
 \fRthe background color
 .TP
