--- a/utilities/convert.1
+++ b/utilities/convert.1
@@ -107,6 +107,9 @@ For a more detailed description of each option, see
 .B "-append"
 \fRappend a set of images
 .TP
+.B "-authenticate \fI<string>"\fP
+\fRdecrypt image with this password
+.TP
 .B "-average"
 \fRaverage a set of images
 .TP
@@ -449,7 +452,7 @@ For a more detailed description of each option, see
 .B "-view \fI<string>"\fP
 \fRFlashPix viewing parameters
 .TP
-.B "-virtual_pixel \fI<type>"\fP
+.B "-virtual_pixel \fI<method>"\fP
 \fRspecify contents of "virtual pixels"
 .TP
 .B "-wave \fI<amplitude>x<wavelength>"\fP
