--- a/utilities/identify.1
+++ b/utilities/identify.1
@@ -45,6 +45,9 @@ For a more detailed description of each option, see
 \fIImageMagick(1)\fP.
 
 .TP
+.B "-authenticate \fI<string>"\fP
+\fRdecrypt image with this password
+.TP
 .B "-cache \fI<threshold>"\fP
 \fRmegabytes of memory available to the pixel cache
 .TP
