--- a/utilities/import.1
+++ b/utilities/import.1
@@ -57,6 +57,9 @@ For a more detailed description of each option, see
 \fIImageMagick(1)\fP.
 
 .TP
+.B "-authenticate \fI<string>"\fP
+\fRdecrypt image with this password
+.TP
 .B "-bordercolor \fI<color>"\fP
 \fRthe border color
 .TP
