--- a/utilities/mogrify.1
+++ b/utilities/mogrify.1
@@ -54,6 +54,9 @@ For a more detailed description of each option, see
 .B "-antialias"
 \fRremove pixel aliasing
 .TP
+.B "-authenticate \fI<string>"\fP
+\fRdecrypt image with this password
+.TP
 .B "-background \fI<color>"\fP
 \fRthe background color
 .TP
@@ -357,7 +360,7 @@ For a more detailed description of each option, see
 .B "-view \fI<string>"\fP
 \fRFlashPix viewing parameters
 .TP
-.B "-virtual_pixel \fI<type>"\fP
+.B "-virtual_pixel \fI<method>"\fP
 \fRspecify contents of "virtual pixels"
 .TP
 .B "-wave \fI<amplitude>x<wavelength>"\fP
