--- a/utilities/montage.1
+++ b/utilities/montage.1
@@ -118,6 +118,9 @@ For a more detailed description of each option, see
 .B "-adjoin"
 \fRjoin images into a single multi-image file
 .TP
+.B "-authenticate \fI<string>"\fP
+\fRdecrypt image with this password
+.TP
 .B "-background \fI<color>"\fP
 \fRthe background color
 .TP
