--- a/utilities/convert.1
+++ b/utilities/convert.1
@@ -416,7 +416,7 @@ For a more detailed description of each option, see
 .B "-texture \fI<filename>"\fP
 \fRname of texture to tile onto the image background
 .TP
-.B "-threshold \fI<value>"\fP
+.B "-threshold \fI<value>{%}"\fP
 \fRthreshold the image
 .TP
 .B "-tile \fI<filename>"\fP
