--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-21  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
+  * The xcf decoder would sometimes create artifacts when reading RLE-encoded
+    grayscale images, due to the green and blue samples not being defined.
+
 2002-09-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
   * Update to Autoconf 2.54.
 
