added -version option.

--- a/utilities/ImageMagick.1
+++ b/utilities/ImageMagick.1
@@ -972,7 +972,7 @@ be treated after being displayed.
 Here are the valid methods:
 
 
-Unsdefined      No disposal specified.
+Undefined       No disposal specified.
 None            Do not dispose between frames.
 Background      Overwrite the image area with background color
 Previous        Overwrite the image area with what was there
@@ -2512,6 +2512,9 @@ If \fB-colors\fP is also specified, the total unique colors in the image
 and color reduction error values are printed. Refer to quantize
 for a description of these values.
 
+.TP
+.B "-version"
+\fRprint ImageMagick version string
 .TP
 .B "-view \fI<string>"\fP
 \fRFlashPix viewing parameters
