--- a/utilities/animate.1
+++ b/utilities/animate.1
@@ -189,6 +189,9 @@ display image using this type.
 .B "-verbose"
 \fRprint detailed information about the image
 .TP
+.B "-version"
+\fRprint ImageMagick version string
+.TP
 .B "-visual \fI<type>"\fP
 \fRanimate images using this X visual type
 .TP
