--- a/utilities/convert.1
+++ b/utilities/convert.1
@@ -449,6 +449,9 @@ For a more detailed description of each option, see
 .B "-verbose"
 \fRprint detailed information about the image
 .TP
+.B "-version"
+\fRprint ImageMagick version string
+.TP
 .B "-view \fI<string>"\fP
 \fRFlashPix viewing parameters
 .TP
