--- a/utilities/display.1
+++ b/utilities/display.1
@@ -344,6 +344,9 @@ detect when image file is modified and redisplay.
 .B "-verbose"
 \fRprint detailed information about the image
 .TP
+.B "-version"
+\fRprint ImageMagick version string
+.TP
 .B "-visual \fI<type>"\fP
 \fRanimate images using this X visual type
 .TP
