--- a/utilities/import.1
+++ b/utilities/import.1
@@ -170,6 +170,9 @@ For a more detailed description of each option, see
 .TP
 .B "-verbose"
 \fRprint detailed information about the image
+.TP
+.B "-version"
+\fRprint ImageMagick version string
 
 For a more detailed description of each option, see
 \fIImageMagick(1)\fP.
