--- a/utilities/mogrify.1
+++ b/utilities/mogrify.1
@@ -90,6 +90,9 @@ For a more detailed description of each option, see
 .B "-comment \fI<string>"\fP
 \fRannotate an image with a comment
 .TP
+.B "-compose \fI<operator>"\fP
+\fRthe type of image composition
+.TP
 .B "-compress \fI<type>"\fP
 \fRthe type of image compression
 .TP
@@ -356,6 +359,9 @@ For a more detailed description of each option, see
 .TP
 .B "-verbose"
 \fRprint detailed information about the image
+.TP
+.B "-version"
+\fRprint ImageMagick version string
 .TP
 .B "-view \fI<string>"\fP
 \fRFlashPix viewing parameters
