--- a/utilities/composite.1
+++ b/utilities/composite.1
@@ -196,6 +196,9 @@ For a more detailed description of each option, see
 .B "-verbose"
 \fRprint detailed information about the image
 .TP
+.B "-version"
+\fRprint ImageMagick version string
+.TP
 .B "-watermark \fI<brightness>x<saturation>"\fP
 \fRpercent brightness and saturation of a watermark
 .TP
