--- a/utilities/conjure.1
+++ b/utilities/conjure.1
@@ -98,6 +98,9 @@ For a more detailed description of each option, see
 .TP
 .B "-verbose"
 \fRprint detailed information about the image
+.TP
+.B "-version"
+\fRprint ImageMagick version string
 .SH MAGICK SCRIPTING LANGUAGE
 The Magick Scripting Language (MSL) presently defines the following
 elements and their attributes:
