--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2002-09-27  Cristy  <cristy@mystic.es.dupont.com>
+  * Replaced underscores in commandline options with hyphens.  For backward
+    compatibility, underscores will continue to be recognized.
+  * Added -blue-primary, -green-primary, -red-primary, -white-point options.
+
+2002-09-27  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
+  * Added BMP2 and BMP3 output formats.
+  * Changed chromaticity primary.z from 1.0 to 1.0-(primary.x+primary.y) in
+    the PNG and PCD codecs.
+
 2002-09-21  Cristy  <cristy@mystic.es.dupont.com>
   * Added 'exception' parameter to the ImageMagick progress monitor API.
   * Added enumerated types for the dispose member of the Image structure.
