--- a/utilities/display.1
+++ b/utilities/display.1
@@ -301,7 +301,7 @@ display image using this type.
 .B "-sample \fI<geometry>"\fP
 \fRscale image with pixel sampling
 .TP
-.B "-sampling_factor \fI<horizontal_factor>x<vertical_factor>"\fP
+.B "-sampling-factor \fI<horizontal_factor>x<vertical_factor>"\fP
 \fRsampling factors used by JPEG or MPEG-2 encoder and YUV decoder/encoder.
 .TP
 .B "-scenes \fI<value-value>"\fP
@@ -310,7 +310,7 @@ display image using this type.
 .B "-segment \fI<cluster threshold>x<smoothing threshold>"\fP
 \fRsegment an image
 .TP
-.B "-shared_memory"
+.B "-shared-memory"
 \fRuse shared memory
 .TP
 .B "-sharpen \fI<radius>x<sigma>"\fP
@@ -319,7 +319,7 @@ display image using this type.
 .B "-size \fI<width>x<height>{+offset}"\fP
 \fRwidth and height of the image
 .TP
-.B "-text_font \fI<name>"\fP
+.B "-text-font \fI<name>"\fP
 \fRfont for writing fixed-width text
 .TP
 .B "-texture \fI<filename>"\fP
@@ -338,7 +338,7 @@ display image using this type.
 \fR
 detect when image file is modified and redisplay.
 .TP
-.B "-use_pixmap"
+.B "-use-pixmap"
 \fRuse the pixmap
 .TP
 .B "-verbose"
@@ -353,7 +353,7 @@ detect when image file is modified and redisplay.
 .B "-window \fI<id>"\fP
 \fRmake image the background of a window
 .TP
-.B "-window_group"
+.B "-window-group"
 \fRspecify the window group
 .TP
 .B "-write \fI<filename>"\fP
