--- a/utilities/identify.1
+++ b/utilities/identify.1
@@ -72,7 +72,7 @@ For a more detailed description of each option, see
 .B "-ping"
 \fRefficiently determine image characteristics
 .TP
-.B "-sampling_factor \fI<horizontal_factor>x<vertical_factor>"\fP
+.B "-sampling-factor \fI<horizontal_factor>x<vertical_factor>"\fP
 \fRsampling factors used by JPEG or MPEG-2 encoder and YUV decoder/encoder.
 .TP
 .B "-size \fI<width>x<height>{+offset}"\fP
