--- a/utilities/montage.1
+++ b/utilities/montage.1
@@ -124,6 +124,9 @@ For a more detailed description of each option, see
 .B "-background \fI<color>"\fP
 \fRthe background color
 .TP
+.B "-blue-primary \fI<X>,<Y>,<Z>"\fP
+\fRblue chromaticity primary point
+.TP
 .B "-blur \fI<radius>x<sigma>"\fP
 \fRblur the image with a Gaussian operator
 .TP
@@ -205,6 +208,9 @@ For a more detailed description of each option, see
 .B "-gravity \fI<type>"\fP
 \fRdirection primitive  gravitates to when annotating the image.
 .TP
+.B "-green-primary \fI<X>,<Y>,<Z>"\fP
+\fRgreen chromaticity primary point
+.TP
 .B "-help"
 \fRprint usage instructions
 .TP
@@ -241,13 +247,16 @@ For a more detailed description of each option, see
 .B "-quality \fI<value>"\fP
 \fRJPEG/MIFF/PNG compression level
 .TP
+.B "-red-primary \fI<X>,<Y>,<Z>"\fP
+\fRred chromaticity primary point
+.TP
 .B "-resize \fI<width>x<height>{%}{@}{!}{<}{>}"\fP
 \fRresize an image
 .TP
 .B "-rotate \fI<degrees>{<}{>}"\fP
 \fRapply Paeth image rotation to the image
 .TP
-.B "-sampling_factor \fI<horizontal_factor>x<vertical_factor>"\fP
+.B "-sampling-factor \fI<horizontal_factor>x<vertical_factor>"\fP
 \fRsampling factors used by JPEG or MPEG-2 encoder and YUV decoder/encoder.
 .TP
 .B "-scenes \fI<value-value>"\fP
@@ -294,6 +303,9 @@ For a more detailed description of each option, see
 .TP
 .B "-version"
 \fRprint ImageMagick version string
+.TP
+.B "-white-point \fI<X>,<Y>,<Z>"\fP
+\fRchromaticity white point
 
 For a more detailed description of each option, see
 \fIImageMagick(1)\fP.
