--- a/utilities/animate.1
+++ b/utilities/animate.1
@@ -162,19 +162,19 @@ display image using this type.
 .B "-rotate \fI<degrees>{<}{>}"\fP
 \fRapply Paeth image rotation to the image
 .TP
-.B "-sampling_factor \fI<horizontal_factor>x<vertical_factor>"\fP
+.B "-sampling-factor \fI<horizontal_factor>x<vertical_factor>"\fP
 \fRsampling factors used by JPEG or MPEG-2 encoder and YUV decoder/encoder.
 .TP
 .B "-scenes \fI<value-value>"\fP
 \fRrange of image scene numbers to read
 .TP
-.B "-shared_memory"
+.B "-shared-memory"
 \fRuse shared memory
 .TP
 .B "-size \fI<width>x<height>{+offset}"\fP
 \fRwidth and height of the image
 .TP
-.B "-text_font \fI<name>"\fP
+.B "-text-font \fI<name>"\fP
 \fRfont for writing fixed-width text
 .TP
 .B "-title \fI<string>"\fP
